@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                                January 9, 2005
+                                January 16, 2005
 
    ---------------------------------------------------------------------------
 
@@ -165,6 +165,18 @@ Windows Users
              This disables support for the wheel on mice that have it.
              (Normally, the wheel will scroll the selector menu on the
              right.)
+
+     nobuttondistinction=yes
+
+             Prior to Tux Paint 0.9.15, the middle and right buttons on a
+             mouse could also be used for clicking. In version 0.9.15, it was
+             changed so that only the left mouse button worked, so as to not
+             train children to use the wrong button.
+
+             However, for children who have trouble with the mouse, this
+             distinction between the two or three buttons on a mouse can be
+             disabled (returning Tux Paint to its old behavior) by using this
+             option.
 
      nofancycursors=yes
 
@@ -407,6 +419,7 @@ Windows Users
        --grab
        --noshortcuts
        --nowheelmouse
+       --nobuttondistinction
        --nofancycursors
        --nooutlines
        --nostamps
@@ -436,6 +449,7 @@ Windows Users
        --dontgrab
        --shortcuts
        --wheelmouse
+       --buttondistinction
        --fancycursors
        --outlines
        --stamps
