@@ -22,7 +22,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>January 9, 2005</p>
+<p>January 16, 2005</p>
 </center>
 
 <hr size=2 noshade>
@@ -216,6 +216,18 @@ New Breed Software</p>
   <dd>
     This disables support for the wheel on mice that have it.
     (Normally, the wheel will scroll the selector menu on the right.)
+  </dd>
+
+  <dt><code><b>nobuttondistinction=yes</b></code></dt>
+  <dd>
+    <p>Prior to Tux&nbsp;Paint 0.9.15, the middle and right buttons on
+    a mouse could also be used for clicking.  In version 0.9.15, it was changed
+    so that <i>only</i> the left mouse button worked, so as to not train
+    children to use the wrong button.</p>
+
+    <p>However, for children who have trouble with the mouse, this distinction
+    between the two or three buttons on a mouse can be disabled (returning
+    Tux&nbsp;Paint to its old behavior) by using this option.</p>
   </dd>
 
   <dt><code><b>nofancycursors=yes</b></code></dt>
@@ -644,6 +656,7 @@ New Breed Software</p>
     --grab<br>
     --noshortcuts<br>
     --nowheelmouse<br>
+    --nobuttondistinction<br>
     --nofancycursors<br>
     --nooutlines<br>
     --nostamps<br>
@@ -676,6 +689,7 @@ New Breed Software</p>
     --dontgrab<br>
     --shortcuts<br>
     --wheelmouse<br>
+    --buttondistinction<br>
     --fancycursors<br>
     --outlines<br>
     --stamps<br>
